rnsc/tests/snapshots/error-parser-outside_class_directive-dot_method_werror.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----

.method public static main ([Ljava/lang/String;)V
.class public HelloWorld
----- STDERR -----
[PARSER-001] Error: unexpected directive before class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/dot_method.rns:2:1 ]
   │
 2 │ .method public static main ([Ljava/lang/String;)V
   │ ───┬───  
   │    ╰───── '.method' is only allowed inside a class definition
   │ 
   │ Note: Define a class first using '.class [access_flags] <name>'.
───╯
----- HASH -----
not generated
