rnsc/tests/snapshots/error-parser-outside_class_directive-dot_space_class.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
. class
----- STDERR -----
[E-008] Error: unexpected identifier before class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/dot_space_class.rns:1:1 ]
   │
 1 │ . class
   │ ┬  
   │ ╰── valid context for . identifier is: 'operand'.
   │ 
   │ Help: Make sure the file starts with a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-008
───╯
----- HASH -----
not generated
