rnsc/tests/snapshots/error-parser-outside_class_directive-dot_space_class_wasm.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
. class
----- STDERR -----
[PARSER-001] Error: unexpected identifier before class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/dot_space_class.rns:1:1 ]
   │
 1 │ . class
   │ ┬  
   │ ╰── this identifier must appear inside a class definition
   │ 
   │ Note: Found identifier '.' before any class was defined. Did you forget to start the class? Try: '.class .'
───╯
----- HASH -----
not generated
